# codemap

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/codemap/: SKILL.md
codemap/: cli.py
codemap/core/: __init__.py  hasher.py  indexer.py  map_store.py  watcher.py
codemap/hooks/: __init__.py  installer.py  pre-commit
codemap/parsers/: __init__.py  base.py  c_parser.py  cpp_parser.py  csharp_parser.py  css_parser.py  go_parser.py  html_parser.py  java_parser.py  javascript_parser.py  kotlin_parser.py  markdown_parser.py  php_parser.py  python_parser.py  rust_parser.py  sql_parser.py  swift_parser.py  treesitter_base.py  typescript_parser.py  yaml_parser.py
codemap/tests/: __init__.py  test_c_parser.py  test_cli.py  test_cpp_parser.py  test_csharp_parser.py  test_css_parser.py  test_go_parser.py  test_hasher.py  test_html_parser.py  test_indexer.py  test_java_parser.py  test_javascript_parser.py  test_kotlin_parser.py  test_map_store.py  test_markdown_parser.py  test_python_parser.py  test_rust_parser.py  test_sql_parser.py  test_swift_parser.py  test_treesitter_base.py  test_typescript_parser.py  test_watcher.py  test_yaml_parser.py
codemap/tests/fixtures/: SampleModule.cs  SampleModule.java  SampleModule.kt  SampleModule.swift  commonjs_test.js  sample_config.yaml  sample_database.sql  sample_doc.md  sample_module.c  sample_module.cpp  sample_module.go  sample_module.py  sample_module.rs  sample_module.ts  sample_page.html  sample_styles.css
codemap/utils/: __init__.py  config.py  file_utils.py
docs/: AI_ASSISTANT_INSTRUCTIONS.md  CODEMAP_INSTRUCTIONS_EMBED.md  adding-language-support.md
docs/plans/: language-support-roadmap.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: ensure-codemap.py  hooks.json
plugin/skills/codemap/: SKILL.md
