[project]
name = "codemap"
version = "1.0.0"
description = "LLM-friendly codebase indexer - reduces token consumption by enabling targeted line-range reads"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CodeMap Team"}
]
keywords = ["cli", "llm", "code-indexer", "ast", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Core tree-sitter (JS/TS)
treesitter = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]
# Individual language support
go = [
    "tree-sitter>=0.21",
    "tree-sitter-go>=0.21",
]
java = [
    "tree-sitter>=0.21",
    "tree-sitter-java>=0.21",
]
csharp = [
    "tree-sitter>=0.21",
    "tree-sitter-c-sharp>=0.21",
]
rust = [
    "tree-sitter>=0.21",
    "tree-sitter-rust>=0.21",
]
# All languages bundle
languages = [
    "codemap[treesitter,go,java,csharp,rust]",
]
watch = [
    "watchdog>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
all = [
    "codemap[languages,watch,dev]",
]

[project.scripts]
codemap = "codemap.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codemap"]

[tool.pytest.ini_options]
testpaths = ["codemap/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
